# python-sandbox

./: .gitignore  MySuiteOfTest.py  README.md  logging.ini
console/: README.md  logger.py
fsm_from_wordlist/: README--technical-details.md  README.md
gencode/: README-cli.md  README-gencpp--blank.md  pyproject.toml
gencode/src/gencode_lib/: __init__.py  identifier.py
gencode/src/gencpp/: __init__.py  __main__.py  blank.py  cli.py
gencode/src/zz_seed_lib/: whatever.py
gencode/tests/behaviour/: __init__.py  test__gencpp_blank__defaults.py  utils.py
gencode/tests/data.expected/: root_foo.cpp  root_foo.hpp  root_whatever.cpp  root_whatever.hpp
gencode/tests/unit/gencode_lib/: __init__.py  test_Identifier.py  test_IdentifierPart.py
prjtabouret/: database.json  gendatabase.py
py-isa-m68k/: README.md  pyproject.toml
py-isa-m68k/src/isa_m68k/: __init__.py
py-isa-m68k/src/isa_m68k/assembly/: __init__.py  __main__.py  cli.py  static_parser.py
py-isa-m68k/src/isa_m68k/assembly/static_parser/: __init__.py  fragment.py  (+6 more)
py-isa-m68k/src/isa_m68k/py_models/: __init__.py  graph.py  graph_tree_rooted.py  interval.py
py-isa-m68k/src/zz_seed_lib/: __init__.py  whatever.py
py-isa-m68k/src/zz_seed_top/: __init__.py  __main__.py  cli.py
py-isa-m68k/tests/behaviour/: test_isa_m68k_as__default.py
py-isa-m68k/tests/behaviour/py_models/: test_Interval.py  test_graph_tree_rooted.py
py-isa-m68k/tests/data/: justquit.s
py-isa-m68k/tests/unit/static_parser/: test_Range.py
runner/: README.md  piru.py  setup.cfg
zz_seed_cli/: README-cli--whatever.md
(+5 files in other folders)
