[metadata]
name = pirupy-sporniket
version = 0.0.1
author = Sporniket
author_email = sporniket.studio@gmail.com
description = PIRUPY, a PIpeline RUnner for PYthon
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sporniket/pirupy
project_urls =
    Bug Tracker = https://github.com/sporniket/pirupy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Environment :: Console

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
